# gamba

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml.example  readme.md
src/: handler.rs  main.rs  util.rs
src/commands/: balance.rs  claim.rs  gamble.rs  help.rs  info.rs  leaderboard.rs  mod.rs  ping.rs  setbalance.rs
src/db/: claim.rs  connection.rs  currency.rs  leaderboard.rs  log.rs  mod.rs  on_message.rs  passive.rs
src/model/: command.rs  emoji.rs  error.rs  icons.rs  mod.rs  module.rs
